# ASDC_Data_and_User_Services

./: .gitignore  .pre-commit-config.yaml  DSCOVR_EPIC_L2_TO3  MISR_AOD  MOP03JM_COMixingRatio  MOPITT_MOP03JM  NetCDF File Fixer.ipynb  README.md  TEMPO_GEE_UWG_ASDC_V2_0.ipynb  _quarto.yml  additional_code_references.qmd  contributing.qmd  custom_notebook_structure_hook.py  environment.yml  index.qmd  learning-more.qmd  mission-index-blurb.qmd  mission_notebooks_index.qmd  mission_scripts.qmd  mission_scripts_index.qmd  missions_index.qmd  ncompare-example-usage.ipynb  pyproject.toml  ruff.toml
.additional_docs/: contributing.qmd  learning-more.qmd
.git-hooks/: README.md  check-notebook-headers.py  check-notebook-imports.py  check-unused-dependencies.py  notebook_utils.py  test_notebook_utils.py
.github/: dependabot.yml
CALIPSO/: CALIPSO_Ozone_Number_Density  how_to_plot_backscatter_for_CALIPSO.ipynb  how_to_plot_backscatter_for_CALIPSO_NVF.ipynb  how_to_plot_ozone_number_densities.ipynb  index.qmd
CERES/: index.qmd  script_for_downloading_hdf.m
CERES_Terra/: CERES.m
DSCOVR/: BaezaNotebook.ipynb  DSCOVR_EPIC_L2_TO3  DSCOVR_EPIC_L4_TrO3_vs_Pandora.py  DSCOVR_EPIC_L4_TrO3_vs_Pandora.readme  DSCOVR_EPIC_L4_TrO3_vs_tolnet_clim_vs_pandora.py  DSCOVR_EPIC_L4_TrO3_vs_tolnet_clim_vs_pandora.readme  Daily_averages_of_DSCOVR_EPIC_Level-2_TO3_total_ozone_using_OPeNDAP.ipynb  Daily_averages_of_DSCOVR_EPIC_Level-4_TrO3_Using_OPeNDAP.ipynb  EPIC_l2_readme  How_to_Access_DSCOVR_EPIC_L2_TO3_Using_OPeNDAP_with_Python3_Calculate_Daily_from_instantaneous.ipynb  index.qmd  qqq  (+17 more)
(+358 files in other folders)
